---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: single_arg_optimization.cm
============================================================
Source code:
// Test the optimization for a single argument case
func increment(x: felt) -> felt {
    return x + 1;
}

func test_single_arg() -> felt {
    // n is allocated at [fp + 0], and when we call increment(n),
    // it's already at the top of the stack, so no copy is needed
    let n = 10;
    let result = increment(n);
    return result;
}
============================================================
Generated CASM:
increment:
   0: 1 -4 1 -3            // [fp + -3] = [fp + -4] op 1
   1: 15 _ _ _             // return
test_single_arg:
test_single_arg:
test_single_arg_0:
   2: 6 10 _ 0             // Store immediate: [fp + 0] = 10
   3: 4 0 _ 1              // Arg 0: [fp + 1] = [fp + 0]
   4: 12 3 0 _             // call increment
   5: 4 2 _ 3              // Store: [fp + 3] = [fp + 2]
   6: 4 3 _ -3             // Return value 0: [fp -3] = [fp + 3]
   7: 15 _ _ _             // return
